--- a/GetMenuPages/App.config
+++ b/GetMenuPages/App.config
@@ -15,6 +15,6 @@
     <add key="menuId" value="2130" />
     <add key="platform" value="kiosk" />
     <add key="tableName" value="[dbo].[XMLPayloadData]" />
-    <add key="connectionString" value="Data Source=DESKTOP-JGJG8M9\SQLEXPRESS;Initial Catalog=AKD_BourneLeisure_v0.01;Integrated Security=True" />
+    <add key="connectionString" value="Data Source=DESKTOP-JGJG8M9\SQLEXPRESS;Initial Catalog=AKD_BourneLeisure;Integrated Security=True" />
   </appSettings>
 </configuration>
